# ha-integration-ekz_tariffs

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  hacs.json  pyproject.toml
.github/workflows/: hacs-validate.yml  validate.yml
custom_components/ekz_tariffs/: __init__.py  config_flow.py  const.py  manifest.json  sensor.py  services.yaml  strings.json
custom_components/ekz_tariffs/translations/: en.json
